--- a/posts/blog1/references.bib
+++ b/posts/blog1/references.bib
@@ -11,3 +11,26 @@
 	note = {ISBN: 0264-410X
 Publisher: Elsevier}
 }
+
+@article{hernán,
+	title = {Causal Inference: What If},
+	author = {{Hernán}, Miguel A and Robins, James M},
+	pages = {311},
+	langid = {en}
+}
+
+@article{keil2014,
+	title = {The parametric G-formula for time-to-event data: towards intuition with a worked example},
+	author = {Keil, Alexander P. and Edwards, Jessie K. and Richardson, David R. and Naimi, Ashley I. and Cole, Stephen R.},
+	year = {2014},
+	month = {11},
+	date = {2014-11},
+	journal = {Epidemiology (Cambridge, Mass.)},
+	pages = {889--897},
+	volume = {25},
+	number = {6},
+	doi = {10.1097/EDE.0000000000000160},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4310506/},
+	note = {PMID: 25140837
+PMCID: PMC4310506}
+}
