--- a/posts/blog1/references.bib
+++ b/posts/blog1/references.bib
@@ -34,3 +34,55 @@ Publisher: Elsevier}
 	note = {PMID: 25140837
 PMCID: PMC4310506}
 }
+
+@article{kontopantelis2015,
+	title = {Regression based quasi-experimental approach when randomisation is not an option: interrupted time series analysis},
+	author = {Kontopantelis, E. and Doran, T. and Springate, D. A. and Buchan, I. and Reeves, D.},
+	year = {2015},
+	month = {06},
+	date = {2015-06-09},
+	journal = {BMJ},
+	pages = {h2750--h2750},
+	volume = {350},
+	number = {jun09 5},
+	doi = {10.1136/bmj.h2750},
+	url = {https://www.bmj.com/lookup/doi/10.1136/bmj.h2750},
+	langid = {en}
+}
+
+@article{penfold2013,
+	title = {Use of Interrupted Time Series Analysis in Evaluating Health Care Quality Improvements},
+	author = {Penfold, Robert B. and Zhang, Fang},
+	year = {2013},
+	month = {11},
+	date = {2013-11-01},
+	journal = {Academic Pediatrics},
+	pages = {S38--S44},
+	series = {Quality Improvement in Pediatric Health Care},
+	volume = {13},
+	number = {6, Supplement},
+	doi = {10.1016/j.acap.2013.08.002},
+	url = {https://www.sciencedirect.com/science/article/pii/S1876285913002106},
+	langid = {en}
+}
+
+@article{warton,
+	title = {Time After Time: Difference-in-Differences and Interrupted Time Series Models in SAS®},
+	author = {Warton, E Margaret},
+	pages = {21},
+	langid = {en}
+}
+
+@book{kleinbaum2005,
+	title = {Survival Analysis A Self-Learning Text},
+	author = {Kleinbaum, David G.},
+	year = {2005},
+	date = {2005},
+	publisher = {Springer New York},
+	series = {Statistics for Biology and Health},
+	edition = {2nd ed. 2005.},
+	doi = {10.1007/0-387-29150-4},
+	note = {DOI: 10.1007/0-387-29150-4},
+	address = {New York, NY},
+	langid = {eng}
+}
