--- a/posts/blog1/references.bib
+++ b/posts/blog1/references.bib
@@ -86,3 +86,35 @@ PMCID: PMC4310506}
 	address = {New York, NY},
 	langid = {eng}
 }
+
+@article{abaluck2021,
+	title = {Impact of community masking on COVID-19: A cluster-randomized trial in Bangladesh},
+	author = {Abaluck, Jason and Kwong, Laura H. and Styczynski, Ashley and Haque, Ashraful and Kabir, Md. Alamgir and Bates-Jefferys, Ellen and Crawford, Emily and Benjamin-Chung, Jade and Raihan, Shabib and Rahman, Shadman and Benhachmi, Salim and Bintee, Neeti Zaman and Winch, Peter J. and Hossain, Maqsud and Reza, Hasan Mahmud and Jaber, Abdullah All and Momen, Shawkee Gulshan and Rahman, Aura and Banti, Faika Laz and Huq, Tahrima Saiha and Luby, Stephen P. and Mobarak, Ahmed Mushfiq},
+	year = {2021},
+	month = {12},
+	date = {2021-12-02},
+	journal = {Science},
+	pages = {eabi9069},
+	volume = {375},
+	number = {6577},
+	doi = {10.1126/science.abi9069},
+	url = {https://www.science.org/doi/10.1126/science.abi9069},
+	note = {Publisher: American Association for the Advancement of Science}
+}
+
+@article{cowger2022,
+	title = {Lifting Universal Masking in Schools {\textemdash} Covid-19 Incidence among Students and Staff},
+	author = {Cowger, Tori L. and Murray, Eleanor J. and Clarke, Jaylen and Bassett, Mary T. and Ojikutu, Bisola O. and {Sánchez}, Sarimer M. and Linos, Natalia and Hall, Kathryn T.},
+	year = {2022},
+	month = {11},
+	date = {2022-11-24},
+	journal = {New England Journal of Medicine},
+	pages = {1935--1946},
+	volume = {387},
+	number = {21},
+	doi = {10.1056/NEJMoa2211029},
+	url = {https://doi.org/10.1056/NEJMoa2211029},
+	note = {Publisher: Massachusetts Medical Society
+{\_}eprint: https://doi.org/10.1056/NEJMoa2211029
+PMID: 36351262}
+}
