--- a/posts/blog1/blog12.qmd
+++ b/posts/blog1/blog12.qmd
@@ -4,9 +4,9 @@ date: "2022-12-09"
 categories: [study design, bias]
 ---
 
-People who might be excluded from the cohort I am analyzing are children who had chronic diseases at the time of enrolment into TARGet Kids!.  These chronic conditions included failure to thrive (1-10% of children in high income countries), cerebral palsy (1 to 4 per 1000), cystic fibrosis (1 in 3500), and congenital anomalies (3.5 to 14 in 10,000).  Children with asthma and high-functioning autism were allowed to enrol in the study. 
+People who are be excluded from the cohort I am analyzing are children who had chronic diseases at the time of enrolment into the study as well as families that do no speak English.  
 
-One question that might be asked, is how will excluding children with chronic conditions impact your results?  We had exlcuded these children because the original aims of the study were about healthy growth.  If our target population does not include children with chronic conditions, and we don't want to make inferences to this population, then we can simply say that doing so is beyond the scope of this study.  And there are good reasons to limit it to children without chronic conditions--namely, that children with chronic conditions may have health behaviours and health outcomes (e.g. more severe infection) that are different than otherwise healthy children, and that these children represent a different population that probably deserves their own study. 
+These chronic conditions included failure to thrive (1-10% of children in high income countries), cerebral palsy (1 to 4 per 1000), cystic fibrosis (1 in 3500), and congenital anomalies (3.5 to 14 in 10,000).  Children with asthma and high-functioning autism were allowed to enrol in the study. One question that might be asked, is how will excluding children with chronic conditions impact your results?  We had excluded these children because the original aims of the study were about healthy growth.  If our target population does not include children with chronic conditions, and we don't want to make inferences to this population, then we can simply say that doing so is beyond the scope of this study.  And there are good reasons to limit it to children without chronic conditions--namely, that children with chronic conditions may have health behaviours and health outcomes (e.g. more severe infection) that are different than otherwise healthy children, and that these children represent a different population that probably deserves their own study. 
 
 If you think of chronic conditions as a confounder, i.e. children with chronic conditions are more likely to adhere to NPIs, and they are more likely to have maybe more severe manifestations of Covid (i.e. less likely to be asymptomatic), then including children with chronic conditions and not adjusting for them will lead to bias.  What this will do is bias the estimate toward the null, because if you can imagine, we will have more exposed infecteds.
 
