--- a/posts/blog1/references.bib
+++ b/posts/blog1/references.bib
@@ -118,3 +118,10 @@ PMCID: PMC4310506}
 {\_}eprint: https://doi.org/10.1056/NEJMoa2211029
 PMID: 36351262}
 }
+
+@article{hernán,
+	title = {Causal Inference: What If},
+	author = {{Hernán}, Miguel A and Robins, James M},
+	pages = {311},
+	langid = {en}
+}
