--- a/posts/blog1/references.bib
+++ b/posts/blog1/references.bib
@@ -125,3 +125,73 @@ PMID: 36351262}
 	pages = {311},
 	langid = {en}
 }
+
+@book{rothman2012,
+	title = {Epidemiology: an introduction},
+	author = {Rothman, Kenneth J.},
+	year = {2012},
+	date = {2012},
+	publisher = {Oxford university press}
+}
+
+@article{sullivan2016,
+	title = {Theoretical Basis of the Test-Negative Study Design for Assessment of Influenza Vaccine Effectiveness},
+	author = {Sullivan, Sheena G. and Tchetgen Tchetgen, Eric J. and Cowling, Benjamin J.},
+	year = {2016},
+	month = {09},
+	date = {2016-09-01},
+	journal = {American Journal of Epidemiology},
+	pages = {345--353},
+	volume = {184},
+	number = {5},
+	doi = {10.1093/aje/kww064},
+	url = {https://doi.org/10.1093/aje/kww064}
+}
+
+@article{schnitzer2022,
+	title = {Estimands and Estimation of COVID-19 Vaccine Effectiveness Under the Test-Negative Design},
+	author = {Schnitzer, Mireille E.},
+	year = {2022},
+	month = {05},
+	date = {2022-05},
+	journal = {Epidemiology (Cambridge, Mass.)},
+	pages = {325--333},
+	volume = {33},
+	number = {3},
+	doi = {10.1097/EDE.0000000000001470},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8983614/},
+	note = {PMID: 35239518
+PMCID: PMC8983614}
+}
+
+@article{sundaram2021,
+	title = {Individual and social determinants of SARS-CoV-2 testing and positivity in Ontario, Canada: a population-wide study},
+	author = {Sundaram, Maria E. and Calzavara, Andrew and Mishra, Sharmistha and Kustra, Rafal and Chan, Adrienne K. and Hamilton, Mackenzie A. and Djebli, Mohamed and Rosella, Laura C. and Watson, Tristan and Chen, Hong and Chen, Branson and Baral, Stefan D. and Kwong, Jeffrey C.},
+	year = {2021},
+	month = {05},
+	date = {2021-05-17},
+	journal = {CMAJ},
+	pages = {E723--E734},
+	volume = {193},
+	number = {20},
+	doi = {10.1503/cmaj.202608},
+	url = {https://www.cmaj.ca/content/193/20/e723},
+	note = {Publisher: CMAJ
+Section: Research
+PMID: 33906966},
+	langid = {en}
+}
+
+@article{shi2023,
+	title = {Current Challenges With the Use of Test-Negative Designs for Modeling COVID-19 Vaccination and Outcomes},
+	author = {Shi, Xu and Li, Kendrick Qijun and Mukherjee, Bhramar},
+	year = {2023},
+	month = {02},
+	date = {2023-02-24},
+	journal = {American Journal of Epidemiology},
+	pages = {328--333},
+	volume = {192},
+	number = {3},
+	doi = {10.1093/aje/kwac203},
+	url = {https://doi.org/10.1093/aje/kwac203}
+}
